package com.bugboard26.model;

public enum HistoryAction {
    CREATE,
    UPDATE,
    ASSIGN,
    COMMENT,
    ARCHIVE,
    DUPLICATE,
    LABELS_SET,
    ATTACHMENT_UPLOADED
}
