package com.bugboard26.model;

public enum Priority {
    LOW,
    MEDIUM,
    HIGH,
    URGENT
}
